buttons collapse correctly and link to page

--- a/dub/style.css
+++ b/dub/style.css
@@ -17,15 +17,16 @@
     box-shadow: rgb(255 165 0 / 50%) 0px 0px 0px 0.25rem;;
 }
 
-.orange:active {
+.orange.active, .orange:active {
     background-color: rgba(255, 165, 0, .1);
     border-color: orange;
     border: 0px;
 }
 
-.orange:active:focus {
-    box-shadow: rgb(255 165 0 / 50%) 0px 0px 0px 0.25rem;;
+.orange:active:focus, .orange.active:focus {
+    box-shadow: rgb(255 165 0 / 50%) 0px 0px 0px 0.25rem;
 }
 
-.btn-outline-success:disabled {
+.orange:disabled {
+    color: white;
 }
